cicd/jenkins/k8s/k8s-namespace.yaml
{
  "kind": "Namespace",
  "apiVersion": "v1",
  "metadata": {
    "name": "jenkins",
    "labels": {
      "name": "jenkins"
    }
  }
}
