cicd/jenkins/k8s/k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: jenkins
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: "arn:aws:acm:eu-west-1:408612431374:certificate/7a38d88c-8c03-4c24-92b6-ebfb12fde36c"
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: "http"
    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "https"
  labels:
    app: jenkins
spec:
  ports:
    - name: https
      port: 443
      targetPort: 8080
  selector:
    app: jenkins
    tier: jenkins
  type: LoadBalancer
