cicd/jenkins/k8s/k8s-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins
  namespace: jenkins
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: jenkins.bootifulmicropizza.com
    http:
      paths:
      - backend:
          serviceName: jenkins
          servicePort: 8080
